Analizador Sintactico/src/parser.out


Unused terminals:


Grammar

Rule 1     program -> program classDecl
Rule 2     program -> empty
Rule 3     classDecl -> CLASS ID extendsIdOp LKEY listFieldOrMethDecl RKEY
Rule 4     extendsIdOp -> EXTENDS ID
Rule 5     extendsIdOp -> empty
Rule 6     listFieldOrMethDecl -> listFieldOrMethDecl fieldOrMethDecl
Rule 7     listFieldOrMethDecl -> empty
Rule 8     fieldOrMethDecl -> fieldDecl
Rule 9     fieldOrMethDecl -> methDecl
Rule 10    fieldDecl -> type ID COMMA ID listId DOTCOMMA
Rule 11    listId -> COMMA ID listId
Rule 12    listId -> empty
Rule 13    methDecl -> type ID LPAR formals RPAR block
Rule 14    formals -> type ID COMMA type ID listTypeId
Rule 15    formals -> empty
Rule 16    listTypeId -> COMMA type ID listTypeId
Rule 17    listTypeId -> empty
Rule 18    type -> INT
Rule 19    type -> BOOLEAN
Rule 20    type -> STRING
Rule 21    type -> type ID
Rule 22    type -> type LCOR RCOR
Rule 23    block -> LKEY varDecl listVarDecl stmt listStmt RKEY
Rule 24    listVarDecl -> listVarDecl varDecl
Rule 25    listVarDecl -> empty
Rule 26    listStmt -> listStmt stmt
Rule 27    listStmt -> empty
Rule 28    varDecl -> type ID equalExprOp COMMA ID equalExprOp listIdEqExprOp DOTCOMMA
Rule 29    equalExprOp -> IGUAL expr
Rule 30    equalExprOp -> empty
Rule 31    listIdEqExprOp -> listIdEqExprOp COMMA ID equalExprOp
Rule 32    listIdEqExprOp -> empty
Rule 33    stmt -> assign DOTCOMMA
Rule 34    stmt -> call DOTCOMMA
Rule 35    stmt -> RETURN exprOp DOTCOMMA
Rule 36    stmt -> IF LPAR expr RPAR stmt elseStmtOp
Rule 37    stmt -> WHILE LPAR expr RPAR stmt
Rule 38    stmt -> breakOrContinue DOTCOMMA
Rule 39    stmt -> block
Rule 40    exprOp -> expr
Rule 41    exprOp -> empty
Rule 42    elseStmtOp -> ELSE
Rule 43    elseStmtOp -> stmt
Rule 44    breakOrContinue -> BREAK
Rule 45    breakOrContinue -> CONTINUE
Rule 46    assign -> location IGUAL expr
Rule 47    location -> ID
Rule 48    location -> expr DOT ID
Rule 49    location -> expr LCOR expr RCOR
Rule 50    call -> method LPAR actuals RPAR
Rule 51    method -> ID
Rule 52    method -> expr DOT ID
Rule 53    actuals -> expr COMMA expr listExpr
Rule 54    actuals -> empty
Rule 55    listExpr -> COMMA expr listExpr
Rule 56    listExpr -> empty
Rule 57    expr -> location
Rule 58    expr -> expr SUM expr
Rule 59    expr -> expr MEN expr
Rule 60    expr -> expr MULT expr
Rule 61    expr -> expr DIV expr
Rule 62    expr -> expr MOD expr
Rule 63    expr -> expr ILOGICO expr
Rule 64    expr -> expr OLOGICO expr
Rule 65    expr -> expr MENORQUE expr
Rule 66    expr -> expr MENORIGUAL expr
Rule 67    expr -> expr MAYORQUE expr
Rule 68    expr -> expr MAYORIGUAL expr
Rule 69    expr -> expr IGUALIGUAL expr
Rule 70    expr -> expr DIFERENTE expr
Rule 71    expr -> call
Rule 72    expr -> THIS
Rule 73    expr -> NEW ID LPAR RPAR
Rule 74    expr -> NEW type LCOR expr RCOR
Rule 75    expr -> expr DOT LENGTH
Rule 76    expr -> UMINUS expr
Rule 77    expr -> NEGBOOL expr
Rule 78    expr -> literal
Rule 79    expr -> LPAR expr RPAR
Rule 80    literal -> NUMERO
Rule 81    literal -> CAD
Rule 82    literal -> TRUE
Rule 83    literal -> FALSE
Rule 84    literal -> NULL
Rule 85    empty -> <empty>

Terminals, with rules where they appear

BOOLEAN              : 19
BREAK                : 44
CAD                  : 81
CLASS                : 3
COMMA                : 10 11 14 16 28 31 53 55
CONTINUE             : 45
DIFERENTE            : 70
DIV                  : 61
DOT                  : 48 52 75
DOTCOMMA             : 10 28 33 34 35 38
ELSE                 : 42
EXTENDS              : 4
FALSE                : 83
ID                   : 3 4 10 10 11 13 14 14 16 21 28 28 31 47 48 51 52 73
IF                   : 36
IGUAL                : 29 46
IGUALIGUAL           : 69
ILOGICO              : 63
INT                  : 18
LCOR                 : 22 49 74
LENGTH               : 75
LKEY                 : 3 23
LPAR                 : 13 36 37 50 73 79
MAYORIGUAL           : 68
MAYORQUE             : 67
MEN                  : 59
MENORIGUAL           : 66
MENORQUE             : 65
MOD                  : 62
MULT                 : 60
NEGBOOL              : 77
NEW                  : 73 74
NULL                 : 84
NUMERO               : 80
OLOGICO              : 64
RCOR                 : 22 49 74
RETURN               : 35
RKEY                 : 3 23
RPAR                 : 13 36 37 50 73 79
STRING               : 20
SUM                  : 58
THIS                 : 72
TRUE                 : 82
UMINUS               : 76
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

actuals              : 50
assign               : 33
block                : 13 39
breakOrContinue      : 38
call                 : 34 71
classDecl            : 1
elseStmtOp           : 36
empty                : 2 5 7 12 15 17 25 27 30 32 41 54 56
equalExprOp          : 28 28 31
expr                 : 29 36 37 40 46 48 49 49 52 53 53 55 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 74 75 76 77 79
exprOp               : 35
extendsIdOp          : 3
fieldDecl            : 8
fieldOrMethDecl      : 6
formals              : 13
listExpr             : 53 55
listFieldOrMethDecl  : 3 6
listId               : 10 11
listIdEqExprOp       : 28 31
listStmt             : 23 26
listTypeId           : 14 16
listVarDecl          : 23 24
literal              : 78
location             : 46 57
methDecl             : 9
method               : 50
program              : 1 0
stmt                 : 23 26 36 37 43
type                 : 10 13 14 14 16 21 22 28 74
varDecl              : 23 24


Parsing method: LALR


state 0

    (0) S' -> . program
    (1) program -> . program classDecl
    (2) program -> . empty
    (85) empty -> .

    CLASS           reduce using rule 85 (empty -> .)
    $end            reduce using rule 85 (empty -> .)


    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (1) program -> program . classDecl
    (3) classDecl -> . CLASS ID extendsIdOp LKEY listFieldOrMethDecl RKEY

    CLASS           shift and go to state 4


    classDecl                      shift and go to state 3

state 2

    (2) program -> empty .

    CLASS           reduce using rule 2 (program -> empty .)
    $end            reduce using rule 2 (program -> empty .)



state 3

    (1) program -> program classDecl .

    CLASS           reduce using rule 1 (program -> program classDecl .)
    $end            reduce using rule 1 (program -> program classDecl .)



state 4

    (3) classDecl -> CLASS . ID extendsIdOp LKEY listFieldOrMethDecl RKEY

    ID              shift and go to state 5



state 5

    (3) classDecl -> CLASS ID . extendsIdOp LKEY listFieldOrMethDecl RKEY
    (4) extendsIdOp -> . EXTENDS ID
    (5) extendsIdOp -> . empty
    (85) empty -> .

    EXTENDS         shift and go to state 7
    LKEY            reduce using rule 85 (empty -> .)


    extendsIdOp                    shift and go to state 6
    empty                          shift and go to state 8

state 6

    (3) classDecl -> CLASS ID extendsIdOp . LKEY listFieldOrMethDecl RKEY

    LKEY            shift and go to state 9



state 7

    (4) extendsIdOp -> EXTENDS . ID

    ID              shift and go to state 10



state 8

    (5) extendsIdOp -> empty .

    LKEY            reduce using rule 5 (extendsIdOp -> empty .)



state 9

    (3) classDecl -> CLASS ID extendsIdOp LKEY . listFieldOrMethDecl RKEY
    (6) listFieldOrMethDecl -> . listFieldOrMethDecl fieldOrMethDecl
    (7) listFieldOrMethDecl -> . empty
    (85) empty -> .

    RKEY            reduce using rule 85 (empty -> .)
    INT             reduce using rule 85 (empty -> .)
    BOOLEAN         reduce using rule 85 (empty -> .)
    STRING          reduce using rule 85 (empty -> .)


    empty                          shift and go to state 12
    listFieldOrMethDecl            shift and go to state 11

state 10

    (4) extendsIdOp -> EXTENDS ID .

    LKEY            reduce using rule 4 (extendsIdOp -> EXTENDS ID .)



state 11

    (3) classDecl -> CLASS ID extendsIdOp LKEY listFieldOrMethDecl . RKEY
    (6) listFieldOrMethDecl -> listFieldOrMethDecl . fieldOrMethDecl
    (8) fieldOrMethDecl -> . fieldDecl
    (9) fieldOrMethDecl -> . methDecl
    (10) fieldDecl -> . type ID COMMA ID listId DOTCOMMA
    (13) methDecl -> . type ID LPAR formals RPAR block
    (18) type -> . INT
    (19) type -> . BOOLEAN
    (20) type -> . STRING
    (21) type -> . type ID
    (22) type -> . type LCOR RCOR

    RKEY            shift and go to state 18
    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 14


    fieldDecl                      shift and go to state 17
    fieldOrMethDecl                shift and go to state 13
    type                           shift and go to state 15
    methDecl                       shift and go to state 16

state 12

    (7) listFieldOrMethDecl -> empty .

    RKEY            reduce using rule 7 (listFieldOrMethDecl -> empty .)
    INT             reduce using rule 7 (listFieldOrMethDecl -> empty .)
    BOOLEAN         reduce using rule 7 (listFieldOrMethDecl -> empty .)
    STRING          reduce using rule 7 (listFieldOrMethDecl -> empty .)



state 13

    (6) listFieldOrMethDecl -> listFieldOrMethDecl fieldOrMethDecl .

    RKEY            reduce using rule 6 (listFieldOrMethDecl -> listFieldOrMethDecl fieldOrMethDecl .)
    INT             reduce using rule 6 (listFieldOrMethDecl -> listFieldOrMethDecl fieldOrMethDecl .)
    BOOLEAN         reduce using rule 6 (listFieldOrMethDecl -> listFieldOrMethDecl fieldOrMethDecl .)
    STRING          reduce using rule 6 (listFieldOrMethDecl -> listFieldOrMethDecl fieldOrMethDecl .)



state 14

    (20) type -> STRING .

    ID              reduce using rule 20 (type -> STRING .)
    LCOR            reduce using rule 20 (type -> STRING .)



state 15

    (10) fieldDecl -> type . ID COMMA ID listId DOTCOMMA
    (13) methDecl -> type . ID LPAR formals RPAR block
    (21) type -> type . ID
    (22) type -> type . LCOR RCOR

    ID              shift and go to state 22
    LCOR            shift and go to state 21



state 16

    (9) fieldOrMethDecl -> methDecl .

    RKEY            reduce using rule 9 (fieldOrMethDecl -> methDecl .)
    INT             reduce using rule 9 (fieldOrMethDecl -> methDecl .)
    BOOLEAN         reduce using rule 9 (fieldOrMethDecl -> methDecl .)
    STRING          reduce using rule 9 (fieldOrMethDecl -> methDecl .)



state 17

    (8) fieldOrMethDecl -> fieldDecl .

    RKEY            reduce using rule 8 (fieldOrMethDecl -> fieldDecl .)
    INT             reduce using rule 8 (fieldOrMethDecl -> fieldDecl .)
    BOOLEAN         reduce using rule 8 (fieldOrMethDecl -> fieldDecl .)
    STRING          reduce using rule 8 (fieldOrMethDecl -> fieldDecl .)



state 18

    (3) classDecl -> CLASS ID extendsIdOp LKEY listFieldOrMethDecl RKEY .

    CLASS           reduce using rule 3 (classDecl -> CLASS ID extendsIdOp LKEY listFieldOrMethDecl RKEY .)
    $end            reduce using rule 3 (classDecl -> CLASS ID extendsIdOp LKEY listFieldOrMethDecl RKEY .)



state 19

    (18) type -> INT .

    ID              reduce using rule 18 (type -> INT .)
    LCOR            reduce using rule 18 (type -> INT .)



state 20

    (19) type -> BOOLEAN .

    ID              reduce using rule 19 (type -> BOOLEAN .)
    LCOR            reduce using rule 19 (type -> BOOLEAN .)



state 21

    (22) type -> type LCOR . RCOR

    RCOR            shift and go to state 23



state 22

    (10) fieldDecl -> type ID . COMMA ID listId DOTCOMMA
    (13) methDecl -> type ID . LPAR formals RPAR block
    (21) type -> type ID .

    COMMA           shift and go to state 25
    LPAR            shift and go to state 24
    ID              reduce using rule 21 (type -> type ID .)
    LCOR            reduce using rule 21 (type -> type ID .)



state 23

    (22) type -> type LCOR RCOR .

    ID              reduce using rule 22 (type -> type LCOR RCOR .)
    LCOR            reduce using rule 22 (type -> type LCOR RCOR .)



state 24

    (13) methDecl -> type ID LPAR . formals RPAR block
    (14) formals -> . type ID COMMA type ID listTypeId
    (15) formals -> . empty
    (18) type -> . INT
    (19) type -> . BOOLEAN
    (20) type -> . STRING
    (21) type -> . type ID
    (22) type -> . type LCOR RCOR
    (85) empty -> .

    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 14
    RPAR            reduce using rule 85 (empty -> .)


    empty                          shift and go to state 26
    type                           shift and go to state 27
    formals                        shift and go to state 28

state 25

    (10) fieldDecl -> type ID COMMA . ID listId DOTCOMMA

    ID              shift and go to state 29



state 26

    (15) formals -> empty .

    RPAR            reduce using rule 15 (formals -> empty .)



state 27

    (14) formals -> type . ID COMMA type ID listTypeId
    (21) type -> type . ID
    (22) type -> type . LCOR RCOR

    ID              shift and go to state 30
    LCOR            shift and go to state 21



state 28

    (13) methDecl -> type ID LPAR formals . RPAR block

    RPAR            shift and go to state 31



state 29

    (10) fieldDecl -> type ID COMMA ID . listId DOTCOMMA
    (11) listId -> . COMMA ID listId
    (12) listId -> . empty
    (85) empty -> .

    COMMA           shift and go to state 33
    DOTCOMMA        reduce using rule 85 (empty -> .)


    listId                         shift and go to state 32
    empty                          shift and go to state 34

state 30

    (14) formals -> type ID . COMMA type ID listTypeId
    (21) type -> type ID .

    COMMA           shift and go to state 35
    ID              reduce using rule 21 (type -> type ID .)
    LCOR            reduce using rule 21 (type -> type ID .)



state 31

    (13) methDecl -> type ID LPAR formals RPAR . block
    (23) block -> . LKEY varDecl listVarDecl stmt listStmt RKEY

    LKEY            shift and go to state 36


    block                          shift and go to state 37

state 32

    (10) fieldDecl -> type ID COMMA ID listId . DOTCOMMA

    DOTCOMMA        shift and go to state 38



state 33

    (11) listId -> COMMA . ID listId

    ID              shift and go to state 39



state 34

    (12) listId -> empty .

    DOTCOMMA        reduce using rule 12 (listId -> empty .)



state 35

    (14) formals -> type ID COMMA . type ID listTypeId
    (18) type -> . INT
    (19) type -> . BOOLEAN
    (20) type -> . STRING
    (21) type -> . type ID
    (22) type -> . type LCOR RCOR

    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 14


    type                           shift and go to state 40

state 36

    (23) block -> LKEY . varDecl listVarDecl stmt listStmt RKEY
    (28) varDecl -> . type ID equalExprOp COMMA ID equalExprOp listIdEqExprOp DOTCOMMA
    (18) type -> . INT
    (19) type -> . BOOLEAN
    (20) type -> . STRING
    (21) type -> . type ID
    (22) type -> . type LCOR RCOR

    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 14


    varDecl                        shift and go to state 41
    type                           shift and go to state 42

state 37

    (13) methDecl -> type ID LPAR formals RPAR block .

    RKEY            reduce using rule 13 (methDecl -> type ID LPAR formals RPAR block .)
    INT             reduce using rule 13 (methDecl -> type ID LPAR formals RPAR block .)
    BOOLEAN         reduce using rule 13 (methDecl -> type ID LPAR formals RPAR block .)
    STRING          reduce using rule 13 (methDecl -> type ID LPAR formals RPAR block .)



state 38

    (10) fieldDecl -> type ID COMMA ID listId DOTCOMMA .

    RKEY            reduce using rule 10 (fieldDecl -> type ID COMMA ID listId DOTCOMMA .)
    INT             reduce using rule 10 (fieldDecl -> type ID COMMA ID listId DOTCOMMA .)
    BOOLEAN         reduce using rule 10 (fieldDecl -> type ID COMMA ID listId DOTCOMMA .)
    STRING          reduce using rule 10 (fieldDecl -> type ID COMMA ID listId DOTCOMMA .)



state 39

    (11) listId -> COMMA ID . listId
    (11) listId -> . COMMA ID listId
    (12) listId -> . empty
    (85) empty -> .

    COMMA           shift and go to state 33
    DOTCOMMA        reduce using rule 85 (empty -> .)


    listId                         shift and go to state 43
    empty                          shift and go to state 34

state 40

    (14) formals -> type ID COMMA type . ID listTypeId
    (21) type -> type . ID
    (22) type -> type . LCOR RCOR

    ID              shift and go to state 44
    LCOR            shift and go to state 21



state 41

    (23) block -> LKEY varDecl . listVarDecl stmt listStmt RKEY
    (24) listVarDecl -> . listVarDecl varDecl
    (25) listVarDecl -> . empty
    (85) empty -> .

    RETURN          reduce using rule 85 (empty -> .)
    IF              reduce using rule 85 (empty -> .)
    WHILE           reduce using rule 85 (empty -> .)
    BREAK           reduce using rule 85 (empty -> .)
    CONTINUE        reduce using rule 85 (empty -> .)
    LKEY            reduce using rule 85 (empty -> .)
    INT             reduce using rule 85 (empty -> .)
    BOOLEAN         reduce using rule 85 (empty -> .)
    STRING          reduce using rule 85 (empty -> .)
    ID              reduce using rule 85 (empty -> .)
    THIS            reduce using rule 85 (empty -> .)
    NEW             reduce using rule 85 (empty -> .)
    UMINUS          reduce using rule 85 (empty -> .)
    NEGBOOL         reduce using rule 85 (empty -> .)
    LPAR            reduce using rule 85 (empty -> .)
    NUMERO          reduce using rule 85 (empty -> .)
    CAD             reduce using rule 85 (empty -> .)
    TRUE            reduce using rule 85 (empty -> .)
    FALSE           reduce using rule 85 (empty -> .)
    NULL            reduce using rule 85 (empty -> .)


    listVarDecl                    shift and go to state 45
    empty                          shift and go to state 46

state 42

    (28) varDecl -> type . ID equalExprOp COMMA ID equalExprOp listIdEqExprOp DOTCOMMA
    (21) type -> type . ID
    (22) type -> type . LCOR RCOR

    ID              shift and go to state 47
    LCOR            shift and go to state 21



state 43

    (11) listId -> COMMA ID listId .

    DOTCOMMA        reduce using rule 11 (listId -> COMMA ID listId .)



state 44

    (14) formals -> type ID COMMA type ID . listTypeId
    (21) type -> type ID .
    (16) listTypeId -> . COMMA type ID listTypeId
    (17) listTypeId -> . empty
    (85) empty -> .

    ID              reduce using rule 21 (type -> type ID .)
    LCOR            reduce using rule 21 (type -> type ID .)
    COMMA           shift and go to state 48
    RPAR            reduce using rule 85 (empty -> .)


    listTypeId                     shift and go to state 50
    empty                          shift and go to state 49

state 45

    (23) block -> LKEY varDecl listVarDecl . stmt listStmt RKEY
    (24) listVarDecl -> listVarDecl . varDecl
    (33) stmt -> . assign DOTCOMMA
    (34) stmt -> . call DOTCOMMA
    (35) stmt -> . RETURN exprOp DOTCOMMA
    (36) stmt -> . IF LPAR expr RPAR stmt elseStmtOp
    (37) stmt -> . WHILE LPAR expr RPAR stmt
    (38) stmt -> . breakOrContinue DOTCOMMA
    (39) stmt -> . block
    (28) varDecl -> . type ID equalExprOp COMMA ID equalExprOp listIdEqExprOp DOTCOMMA
    (46) assign -> . location IGUAL expr
    (50) call -> . method LPAR actuals RPAR
    (44) breakOrContinue -> . BREAK
    (45) breakOrContinue -> . CONTINUE
    (23) block -> . LKEY varDecl listVarDecl stmt listStmt RKEY
    (18) type -> . INT
    (19) type -> . BOOLEAN
    (20) type -> . STRING
    (21) type -> . type ID
    (22) type -> . type LCOR RCOR
    (47) location -> . ID
    (48) location -> . expr DOT ID
    (49) location -> . expr LCOR expr RCOR
    (51) method -> . ID
    (52) method -> . expr DOT ID
    (57) expr -> . location
    (58) expr -> . expr SUM expr
    (59) expr -> . expr MEN expr
    (60) expr -> . expr MULT expr
    (61) expr -> . expr DIV expr
    (62) expr -> . expr MOD expr
    (63) expr -> . expr ILOGICO expr
    (64) expr -> . expr OLOGICO expr
    (65) expr -> . expr MENORQUE expr
    (66) expr -> . expr MENORIGUAL expr
    (67) expr -> . expr MAYORQUE expr
    (68) expr -> . expr MAYORIGUAL expr
    (69) expr -> . expr IGUALIGUAL expr
    (70) expr -> . expr DIFERENTE expr
    (71) expr -> . call
    (72) expr -> . THIS
    (73) expr -> . NEW ID LPAR RPAR
    (74) expr -> . NEW type LCOR expr RCOR
    (75) expr -> . expr DOT LENGTH
    (76) expr -> . UMINUS expr
    (77) expr -> . NEGBOOL expr
    (78) expr -> . literal
    (79) expr -> . LPAR expr RPAR
    (80) literal -> . NUMERO
    (81) literal -> . CAD
    (82) literal -> . TRUE
    (83) literal -> . FALSE
    (84) literal -> . NULL

    RETURN          shift and go to state 52
    IF              shift and go to state 68
    WHILE           shift and go to state 53
    BREAK           shift and go to state 72
    CONTINUE        shift and go to state 74
    LKEY            shift and go to state 36
    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 14
    ID              shift and go to state 67
    THIS            shift and go to state 73
    NEW             shift and go to state 55
    UMINUS          shift and go to state 70
    NEGBOOL         shift and go to state 54
    LPAR            shift and go to state 51
    NUMERO          shift and go to state 66
    CAD             shift and go to state 62
    TRUE            shift and go to state 57
    FALSE           shift and go to state 69
    NULL            shift and go to state 56


    breakOrContinue                shift and go to state 61
    expr                           shift and go to state 71
    varDecl                        shift and go to state 64
    literal                        shift and go to state 58
    stmt                           shift and go to state 65
    method                         shift and go to state 63
    call                           shift and go to state 59
    type                           shift and go to state 42
    assign                         shift and go to state 75
    block                          shift and go to state 76
    location                       shift and go to state 60

state 46

    (25) listVarDecl -> empty .

    RETURN          reduce using rule 25 (listVarDecl -> empty .)
    IF              reduce using rule 25 (listVarDecl -> empty .)
    WHILE           reduce using rule 25 (listVarDecl -> empty .)
    BREAK           reduce using rule 25 (listVarDecl -> empty .)
    CONTINUE        reduce using rule 25 (listVarDecl -> empty .)
    LKEY            reduce using rule 25 (listVarDecl -> empty .)
    INT             reduce using rule 25 (listVarDecl -> empty .)
    BOOLEAN         reduce using rule 25 (listVarDecl -> empty .)
    STRING          reduce using rule 25 (listVarDecl -> empty .)
    ID              reduce using rule 25 (listVarDecl -> empty .)
    THIS            reduce using rule 25 (listVarDecl -> empty .)
    NEW             reduce using rule 25 (listVarDecl -> empty .)
    UMINUS          reduce using rule 25 (listVarDecl -> empty .)
    NEGBOOL         reduce using rule 25 (listVarDecl -> empty .)
    LPAR            reduce using rule 25 (listVarDecl -> empty .)
    NUMERO          reduce using rule 25 (listVarDecl -> empty .)
    CAD             reduce using rule 25 (listVarDecl -> empty .)
    TRUE            reduce using rule 25 (listVarDecl -> empty .)
    FALSE           reduce using rule 25 (listVarDecl -> empty .)
    NULL            reduce using rule 25 (listVarDecl -> empty .)



state 47

    (28) varDecl -> type ID . equalExprOp COMMA ID equalExprOp listIdEqExprOp DOTCOMMA
    (21) type -> type ID .
    (29) equalExprOp -> . IGUAL expr
    (30) equalExprOp -> . empty
    (85) empty -> .

    ID              reduce using rule 21 (type -> type ID .)
    LCOR            reduce using rule 21 (type -> type ID .)
    IGUAL           shift and go to state 77
    COMMA           reduce using rule 85 (empty -> .)


    equalExprOp                    shift and go to state 78
    empty                          shift and go to state 79

state 48

    (16) listTypeId -> COMMA . type ID listTypeId
    (18) type -> . INT
    (19) type -> . BOOLEAN
    (20) type -> . STRING
    (21) type -> . type ID
    (22) type -> . type LCOR RCOR

    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 14


    type                           shift and go to state 80

state 49

    (17) listTypeId -> empty .

    RPAR            reduce using rule 17 (listTypeId -> empty .)



state 50

    (14) formals -> type ID COMMA type ID listTypeId .

    RPAR            reduce using rule 14 (formals -> type ID COMMA type ID listTypeId .)



state 51

    (79) expr -> LPAR . expr RPAR
    (57) expr -> . location
    (58) expr -> . expr SUM expr
    (59) expr -> . expr MEN expr
    (60) expr -> . expr MULT expr
    (61) expr -> . expr DIV expr
    (62) expr -> . expr MOD expr
    (63) expr -> . expr ILOGICO expr
    (64) expr -> . expr OLOGICO expr
    (65) expr -> . expr MENORQUE expr
    (66) expr -> . expr MENORIGUAL expr
    (67) expr -> . expr MAYORQUE expr
    (68) expr -> . expr MAYORIGUAL expr
    (69) expr -> . expr IGUALIGUAL expr
    (70) expr -> . expr DIFERENTE expr
    (71) expr -> . call
    (72) expr -> . THIS
    (73) expr -> . NEW ID LPAR RPAR
    (74) expr -> . NEW type LCOR expr RCOR
    (75) expr -> . expr DOT LENGTH
    (76) expr -> . UMINUS expr
    (77) expr -> . NEGBOOL expr
    (78) expr -> . literal
    (79) expr -> . LPAR expr RPAR
    (47) location -> . ID
    (48) location -> . expr DOT ID
    (49) location -> . expr LCOR expr RCOR
    (50) call -> . method LPAR actuals RPAR
    (80) literal -> . NUMERO
    (81) literal -> . CAD
    (82) literal -> . TRUE
    (83) literal -> . FALSE
    (84) literal -> . NULL
    (51) method -> . ID
    (52) method -> . expr DOT ID

    THIS            shift and go to state 73
    NEW             shift and go to state 55
    UMINUS          shift and go to state 70
    NEGBOOL         shift and go to state 54
    LPAR            shift and go to state 51
    ID              shift and go to state 67
    NUMERO          shift and go to state 66
    CAD             shift and go to state 62
    TRUE            shift and go to state 57
    FALSE           shift and go to state 69
    NULL            shift and go to state 56


    expr                           shift and go to state 83
    literal                        shift and go to state 58
    call                           shift and go to state 81
    location                       shift and go to state 82
    method                         shift and go to state 63

state 52

    (35) stmt -> RETURN . exprOp DOTCOMMA
    (40) exprOp -> . expr
    (41) exprOp -> . empty
    (57) expr -> . location
    (58) expr -> . expr SUM expr
    (59) expr -> . expr MEN expr
    (60) expr -> . expr MULT expr
    (61) expr -> . expr DIV expr
    (62) expr -> . expr MOD expr
    (63) expr -> . expr ILOGICO expr
    (64) expr -> . expr OLOGICO expr
    (65) expr -> . expr MENORQUE expr
    (66) expr -> . expr MENORIGUAL expr
    (67) expr -> . expr MAYORQUE expr
    (68) expr -> . expr MAYORIGUAL expr
    (69) expr -> . expr IGUALIGUAL expr
    (70) expr -> . expr DIFERENTE expr
    (71) expr -> . call
    (72) expr -> . THIS
    (73) expr -> . NEW ID LPAR RPAR
    (74) expr -> . NEW type LCOR expr RCOR
    (75) expr -> . expr DOT LENGTH
    (76) expr -> . UMINUS expr
    (77) expr -> . NEGBOOL expr
    (78) expr -> . literal
    (79) expr -> . LPAR expr RPAR
    (85) empty -> .
    (47) location -> . ID
    (48) location -> . expr DOT ID
    (49) location -> . expr LCOR expr RCOR
    (50) call -> . method LPAR actuals RPAR
    (80) literal -> . NUMERO
    (81) literal -> . CAD
    (82) literal -> . TRUE
    (83) literal -> . FALSE
    (84) literal -> . NULL
    (51) method -> . ID
    (52) method -> . expr DOT ID

    THIS            shift and go to state 73
    NEW             shift and go to state 55
    UMINUS          shift and go to state 70
    NEGBOOL         shift and go to state 54
    LPAR            shift and go to state 51
    DOTCOMMA        reduce using rule 85 (empty -> .)
    ID              shift and go to state 67
    NUMERO          shift and go to state 66
    CAD             shift and go to state 62
    TRUE            shift and go to state 57
    FALSE           shift and go to state 69
    NULL            shift and go to state 56


    expr                           shift and go to state 86
    exprOp                         shift and go to state 84
    literal                        shift and go to state 58
    call                           shift and go to state 81
    location                       shift and go to state 82
    method                         shift and go to state 63
    empty                          shift and go to state 85

state 53

    (37) stmt -> WHILE . LPAR expr RPAR stmt

    LPAR            shift and go to state 87



state 54

    (77) expr -> NEGBOOL . expr
    (57) expr -> . location
    (58) expr -> . expr SUM expr
    (59) expr -> . expr MEN expr
    (60) expr -> . expr MULT expr
    (61) expr -> . expr DIV expr
    (62) expr -> . expr MOD expr
    (63) expr -> . expr ILOGICO expr
    (64) expr -> . expr OLOGICO expr
    (65) expr -> . expr MENORQUE expr
    (66) expr -> . expr MENORIGUAL expr
    (67) expr -> . expr MAYORQUE expr
    (68) expr -> . expr MAYORIGUAL expr
    (69) expr -> . expr IGUALIGUAL expr
    (70) expr -> . expr DIFERENTE expr
    (71) expr -> . call
    (72) expr -> . THIS
    (73) expr -> . NEW ID LPAR RPAR
    (74) expr -> . NEW type LCOR expr RCOR
    (75) expr -> . expr DOT LENGTH
    (76) expr -> . UMINUS expr
    (77) expr -> . NEGBOOL expr
    (78) expr -> . literal
    (79) expr -> . LPAR expr RPAR
    (47) location -> . ID
    (48) location -> . expr DOT ID
    (49) location -> . expr LCOR expr RCOR
    (50) call -> . method LPAR actuals RPAR
    (80) literal -> . NUMERO
    (81) literal -> . CAD
    (82) literal -> . TRUE
    (83) literal -> . FALSE
    (84) literal -> . NULL
    (51) method -> . ID
    (52) method -> . expr DOT ID

    THIS            shift and go to state 73
    NEW             shift and go to state 55
    UMINUS          shift and go to state 70
    NEGBOOL         shift and go to state 54
    LPAR            shift and go to state 51
    ID              shift and go to state 67
    NUMERO          shift and go to state 66
    CAD             shift and go to state 62
    TRUE            shift and go to state 57
    FALSE           shift and go to state 69
    NULL            shift and go to state 56


    expr                           shift and go to state 88
    literal                        shift and go to state 58
    call                           shift and go to state 81
    location                       shift and go to state 82
    method                         shift and go to state 63

state 55

    (73) expr -> NEW . ID LPAR RPAR
    (74) expr -> NEW . type LCOR expr RCOR
    (18) type -> . INT
    (19) type -> . BOOLEAN
    (20) type -> . STRING
    (21) type -> . type ID
    (22) type -> . type LCOR RCOR

    ID              shift and go to state 90
    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 14


    type                           shift and go to state 89

state 56

    (84) literal -> NULL .
